# ------------------------------------------------------------------------------
# File:   Makefile.am 
# Author: James Couzens <jcouzens@codeshare.ca>
# Date:   June 15, 2004  
# Info:   Makefile base for Autotools for the libSPF library
# ------------------------------------------------------------------------------

.NOTPARALLEL:
.NO_PARALLEL:

# ------------------------------------------------------------------------------
# Build subdirectories
# ------------------------------------------------------------------------------

SUBDIRS = @LIBSPF_BUILD_DIRS@
